<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welecome in News App</string>
    <string name="searchhint">Search</string>
    <string name="pick">Pick your cateory of interest</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="searchBtn">Search</string>
    <string name="search">Search</string>
    <string name="sports">   Sports   </string>
    <string name="business">  Business </string>
    <string name="science">  Science </string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="Favorite">Favorite</string>
    <string name="log_out">Logout</string>
    <string name="App">News</string>
    <string name="select_language">Select Language</string>
    <string name="dark_mode">dark mode</string>
    <string name="light_mode">light mode</string>
    <string name="font_size">Font Size</string>
    <string name="_16">16</string>
    <string name="setting">Setting</string>
    <string name="stay_infromed_stay_ahead">Stay Infromed , Stay Ahead!</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>العربية</item>
    </string-array>
</resources>