<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIN = "navigation_view"
    >

    <group  android:checkableBehavior="single" >
        <item android:title="@string/settings" android:id="@+id/setting" android:icon="@drawable/baseline_settings_24" />
        <item android:title="@string/categories"  android:id="@+id/category" android:icon="@drawable/baseline_format_list_bulleted_24"/>
        <item android:title="@string/Favorite" android:id="@+id/favorite" android:icon="@drawable/baseline_favorite_24"/>
    </group>

    <item  android:title="">
        <menu >
            <item android:title="@string/log_out"  android:icon="@drawable/baseline_logout_24" />
        </menu>

    </item>

</menu>