<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/category">

    <fragment
        android:id="@+id/category"
        android:name="com.example.test.category"
        android:label="@string/App"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_category_to_sports"
            app:destination="@id/sports" />

        <action
            android:id="@+id/action_category_to_favorite"
            app:destination="@id/favorite" />
        <action
            android:id="@+id/action_category_to_setting2"
            app:destination="@id/setting2" />
    </fragment>
    <fragment
        android:id="@+id/sports"
        android:name="com.example.test.sports"
        android:label="@string/sports"
        tools:layout="@layout/fragment_sports" >
        <action
            android:id="@+id/action_sports_to_category"
            app:destination="@id/category" />
    </fragment>

    <fragment
        android:id="@+id/favorite"
        android:name="com.example.test.favorite"
        android:label="@string/Favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favorite_to_category"
            app:destination="@id/category" />
        <action
            android:id="@+id/action_favorite_to_setting2"
            app:destination="@id/setting2" />
    </fragment>
    <fragment
        android:id="@+id/setting2"
        android:name="com.example.test.setting"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_setting2_to_category"
            app:destination="@id/category" />
        <action
            android:id="@+id/action_setting2_to_favorite"
            app:destination="@id/favorite" />
    </fragment>
</navigation>